<resources>
    <string name="app_name">Youtube Floating</string>
    <string name="up_next">Up next</string>
    <string name="search">Search</string>
    <string name="auto_play">Auto Play</string>
    <string name="share">Share</string>
    <string name="add_favorite">Add my favourite</string>
    <string name="delete">Delete</string>
    <string name="quality">Auto</string>
    <string name="content">What the video right when locking the screen</string>
    <string name="clock_screen">Clock the screen</string>
    <string name="quality_video">Quality videos</string>
    <string name="settings">Settings</string>
    <string name="quality_144">144p</string>
    <string name="quality_360">360p</string>
    <string name="quality_480">480p</string>
    <string name="quality_720">720p</string>
    <string name="quality_1080">1080p</string>
    <string name="share_to_friend">Video https://www.youtube.com/watch?v=</string>
    <string name="share_to_friend_google_play">hay lắm. Sử dụng ứng dụng để xem nhiều video hơn https://play.google.com/store/apps/details?id=</string>
    <string name="search_results">Search Results</string>
    <string name="addId">%2C</string>
</resources>
