<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout

    android:id="@+id/root_view"
    android:background="@color/colorWhite"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <android.support.v7.widget.Toolbar
        android:theme="@style/Tranparent"
        android:layout_alignParentTop="true"
        android:id="@+id/toolbar"
        android:background="@null"
        android:elevation="@dimen/height_1"
        android:minHeight="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


    </android.support.v7.widget.Toolbar>
    <View
        android:id="@+id/view"
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_1"
        android:background="@drawable/toolbar_drop_shadow"/>
    <LinearLayout
        android:layout_below="@+id/view"
        android:theme="@style/Tranparent"
        android:id="@+id/rootView"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:paddingTop="@dimen/height_12"
            android:paddingLeft="@dimen/height_12"
            android:paddingRight="@dimen/height_12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:paddingTop="@dimen/space_4"
                android:paddingBottom="@dimen/space_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/space_4"
                android:layout_toLeftOf="@+id/chekcAutoPlay"
                android:text="@string/auto_play"
                android:textAllCaps="false"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/space_20" />

            <Switch
                android:paddingTop="@dimen/space_4"
                android:paddingBottom="@dimen/space_4"
                android:id="@+id/chekcAutoPlay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/choose_quality"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/height_12"
            android:paddingRight="@dimen/height_12"
            android:paddingTop="@dimen/height_12">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/space_4"
                android:layout_toLeftOf="@+id/quality"
                android:paddingBottom="@dimen/space_4"
                android:paddingTop="@dimen/space_4"
                android:text="@string/quality_video"
                android:textAllCaps="false"
                android:textColor="@color/colorBlack"
                android:textSize="@dimen/space_20" />

            <TextView
                android:id="@+id/quality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:paddingBottom="@dimen/space_4"
                android:paddingLeft="0dp"
                android:paddingTop="@dimen/space_4"
                android:text="@string/quality"
                android:textColor="@color/gray" />
        </RelativeLayout>

        <RelativeLayout
            android:paddingTop="@dimen/height_12"
            android:paddingLeft="@dimen/height_12"
            android:paddingRight="@dimen/height_12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/height_12">

            <RelativeLayout
                android:id="@+id/clock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/switch_clock">

                <TextView
                    android:id="@+id/title_clock"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginRight="@dimen/space_4"
                    android:text="@string/clock_screen"
                    android:textAllCaps="false"
                    android:textColor="@color/colorBlack"
                    android:textSize="@dimen/space_20" />

                <TextView
                    android:id="@+id/check_lock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/title_clock"
                    android:layout_marginTop="@dimen/space_4"
                    android:gravity="left"
                    android:text="@string/content"
                    android:textSize="@dimen/space_16" />
            </RelativeLayout>

            <Switch
                android:id="@+id/switch_clock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true" />


        </RelativeLayout>


    </LinearLayout>
    <include layout="@layout/bottom_view"/>
</RelativeLayout>