<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.example.administrator.youtube.youtubeplayer.YouTubePlayerView
        android:id="@+id/youtube_player_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </com.example.administrator.youtube.youtubeplayer.YouTubePlayerView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/height_12"
        android:orientation="vertical">

        <TextView
            android:layout_marginRight="@dimen/height_16"
            android:singleLine="true"
            android:id="@+id/title_video"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/space_12"
            android:text="My Lift"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/space_20"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/view_video"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/space_12"
            android:text="100.000 Views"
            android:textColor="@color/drop_shadow_color"
            android:textSize="@dimen/height_12" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_8"
        android:orientation="horizontal"
        android:weightSum="2">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
        <RelativeLayout
            android:id="@+id/rl_share"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/height_16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:layout_centerHorizontal="true"
                android:layout_marginRight="@dimen/height_16"
                android:id="@+id/img_share"
                android:background="@drawable/ic_share_black"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:text="@string/share"
                android:layout_below="@+id/img_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">
           <RelativeLayout
              android:id="@+id/rl_favourite"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content">
               <ImageView
                   android:layout_centerHorizontal="true"
                   android:layout_marginLeft="@dimen/height_16"
                   android:id="@+id/img_favorite"
                   android:layout_alignParentTop="true"
                   android:background="@drawable/ic_add_favourite"

                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content" />
               <TextView
                   android:text="@string/add_favorite"
                   android:layout_below="@+id/img_favorite"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content" />
           </RelativeLayout>

        </RelativeLayout>
    </LinearLayout>
    <RelativeLayout
        android:layout_marginTop="@dimen/space_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
           android:layout_marginLeft="@dimen/height_12"
           android:layout_centerVertical="true"
            android:text="@string/up_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:text="@string/auto_play"
            android:layout_marginRight="@dimen/space_8"
            android:layout_toLeftOf="@+id/check_autoplay"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Switch
            android:id="@+id/check_autoplay"
            android:paddingRight="@dimen/space_4"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
           android:layout_gravity="right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/list_item_play"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v7.widget.RecyclerView>
</LinearLayout>